# ogt-web

./: .bazelrc  .dockerignore  .env.encrypted  .env.example  .env.production  .envrc  .gitattributes  .gitignore  .sops.yaml  AGENTS.md  CLAUDE.md  Caddyfile.dev  DEPLOYMENT.md  Dockerfile  Dockerfile.minimal  Dockerfile.nix  GET-TIGRIS-CREDENTIALS.md  Justfile  LICENSE  MODULE.bazel  PROJECT_SUMMARY.md  README.md  README_REVIEW.md  SECRETS-SETUP.md  SECURITY-AUDIT-COMPLETE.md  SECURITY-FIXES-APPLIED.md  SECURITY-STATUS.md  SEX_TOY_EXPLORATION_SUMMARY.md  attic-deployment.yaml  docker-compose.yml  flake.nix  fly.toml  gitcrypt-gist.sh  index.html  magento-install.sh  medusa-config.ts  mikkihugo-runners-values.yaml  package-lock.json  package.json  result  (+2 more)
.claude/: PERMISSIONS.md
.githooks/: pre-commit
.github/: actionlint.yaml  copilot-instructions.md
admin/: .gitignore  AGENTS.md  ARCHITECTURE.md  App.tsx  index.html  package-lock.json  package.json
apps/marketing-service-go/: BUILD.bazel  Dockerfile  go.mod  go.sum  main.go
apps/marketing-service-go/cmd/server/: main.go
backend/: go.mod  go.sum  main.go
chatwoot/: fly.toml
deploy/: .env.example  Caddyfile  Dockerfile.medusa  build-and-push.sh  deploy.sh  docker-compose.yml
docker/: start.sh  supervisord.conf
docs/: FEATURE_BRIEF_SEX_TOYS.md  IMPLEMENTATION_PHASES.md  NEXT_STEPS_CODE_PHASE.md  PROJECT_TIMELINE_SEX_TOYS.md  RISK_ASSESSMENT_SEX_TOYS.md
infra/: .env.encrypted  Caddyfile  docker-compose.yml
magento-theme/: README.md  composer.json  registration.php  theme.xml
modules/: database.nix  (+8 more)
(+260 files in other folders)
