module(
    name = "ogt_web",
    version = "0.0.1",
)

# Go Rules
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")

# Node/JS Rules
bazel_dep(name = "aspect_rules_js", version = "1.38.0")
bazel_dep(name = "aspect_rules_ts", version = "2.2.0")

# OCI/Docker Rules
bazel_dep(name = "rules_oci", version = "1.7.4")

# Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.1")

# Go Dependencies
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//apps/marketing-service-go:go.mod")
use_repo(
    go_deps,
    "com_github_go_chi_chi_v5",
    "com_github_jackc_pgx_v5",
    "com_github_stripe_stripe_go_v76",
)


